@@ -65,6 +65,8 @@ Each release lists incompatible changes at its top.
 
 @item Use @code{menulibre} instead of @code{alacarte} in XFCE and MATE integration by default [fuchur]
 
+@item Do not let @code{xfce-session} save the session (by adding @code{-f} flag in XFCE integration) [fuchur]
+
 @item Add update german translation [fuchur]
 
 @item Improve doc strings in many modules [fuchur]
