@@ -3,6 +3,9 @@
 	* sawfish/lisp/sawfish/wm/integration/mate.jl:
 	  use menulibre instead of alacarte for XFCE and MATE [fuchur]
 
+	* sawfish/lisp/sawfish/wm/integration/xfce.jl:
+	  don't let xfce-session save the session [fuchur]
+
 2014-04-06  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* po/de.po: update german translation [fuchur]
 
